--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.2",
     "vue": "^3.5.22",
     "zod": "^4.1.11"
